--- a/docs/content/Button.mdx
+++ b/docs/content/Button.mdx
@@ -151,6 +151,7 @@ Native `<button>` HTML attributes are forwarded to the underlying React `button`
     type="Component"
     description="provide an octicon. It will be placed after the button text"
   />
+  <PropsTableAsRow defaultElementType="button" />
   <PropsTableSxRow />
 </PropsTable>
 
