--- a/docs/content/Button.mdx
+++ b/docs/content/Button.mdx
@@ -153,6 +153,13 @@ Native `<button>` HTML attributes are forwarded to the underlying React `button`
   />
   <PropsTableAsRow defaultElementType="button" />
   <PropsTableSxRow />
+ <PropsTablePassthroughPropsRow
+    elementName="button"
+    passthroughPropsLink={
+      <Link href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button#attributes">MDN</Link>
+    }
+    isPolymorphic
+  />
 </PropsTable>
 
 ### Button.Counter
